fixed modal scrollbar appearing when not needed

--- a/client/src/components/modal/Modal.css
+++ b/client/src/components/modal/Modal.css
@@ -37,7 +37,7 @@
 	opacity: 0;
 	padding: 0 0.5rem 0.5rem 0.5rem;
 	transition: transform 350ms ease-out, opacity 350ms ease-out;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .modal.enter-done .modal-content {
